# backend

sprint1/problems/async_server/solution/: Команды для запуска.txt  Скрипт сборки.txt  комада для перезаписи файлов (PowerShall).txt  тестирование на GitHub.txt
sprint1/problems/async_server/solution/src/: Exp.txt  http_server.cpp  http_server.h  main.cpp
sprint1/problems/cafeteria/solution/: Команды для запуска.txt  Скрипт сборки.txt  тестирование на GitHub.txt
sprint1/problems/cafeteria/solution/src/: cafeteria.h  ingredients.h
sprint1/problems/final_task/solution/src/: http_server.cpp  json_loader.cpp  json_loader.h  model.h  request_handler.cpp
sprint1/problems/restaurant_single_threaded/solution/: сборка.txt  тестирование на GitHub.txt
sprint1/problems/restaurant_single_threaded/solution/src/: main.cpp
sprint1/problems/sum/solution/: main.cpp
sprint1/problems/sync_server/solution/: Скрипт сборки.txt  Скрипт тестирования.txt
sprint2/problems/command_line/solution/: CMakeLists.txt
sprint2/problems/command_line/solution/src/: dog.h  game.cpp  game.h  http_server.cpp  json_loader.cpp  json_loader.h  logger.h  main.cpp  map.h  model.cpp  model.h  player.cpp  player.h  request_handler.cpp  request_handler.h  tagged.h  ticker.h  token_generator.cpp  token_generator.h
src/: http_server.h  json_loader.cpp  main.cpp  request_handler.cpp  request_handler.h
